# iu9-distributed-db

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  docker-compose.yaml  requirements.txt  shell.nix
cmake/: FetchAsioGrpc.cmake  FetchBoost.cmake  FetchFolly.cmake  FetchGRPC.cmake  FetchZookeeper.cmake  folly-demangle.patch
include/stewkk/db/logic/controllers/: clear.hpp  controller.hpp  dto.hpp  get.hpp  insert.hpp  remove.hpp  update.hpp
include/stewkk/db/logic/coordination/: global_versioning.hpp  zookeeper.hpp
include/stewkk/db/logic/filesystem/: filesystem.hpp
include/stewkk/db/logic/log/: file_log_sink.hpp
include/stewkk/db/logic/recovery/: swappable_wal_writer.hpp  swappable_wal_writer_impl.hpp  wal_reader.hpp  wal_writer.hpp  wal_writer_impl.hpp
include/stewkk/db/logic/replication/: replication.hpp
include/stewkk/db/logic/result/: error.hpp  result.hpp
include/stewkk/db/logic/storage/: collectable_memstorage.hpp  compaction.hpp  filesystem.hpp  inmemory.hpp  memstorage.hpp  memstorage_impl.hpp  persistent.hpp  persistent_collection.hpp  persistent_data.hpp  storage.hpp  storage_system.hpp  swappable_memstorage.hpp
include/stewkk/db/logic/synchronization/: job_guard.hpp  operations_guard.hpp
include/stewkk/db/models/dto/: dto.hpp
include/stewkk/db/models/storage/: kw_pair.hpp
include/stewkk/db/views/: add_handlers.hpp  clear.hpp  error_handling_middleware.hpp  get.hpp  handlers_proxy.hpp  insert.hpp  is_expired_middleware.hpp  is_master_middleware.hpp  register_handlers.hpp  remove.hpp  request_types.hpp  rethrow.hpp  update.hpp
keeper/: Makefile  keeper_cluster_config.xml  keeper_single_config.xml
pytests/: Client.py  conftest.py  requirements.txt  test_db.py
pytests/codegen/: api_pb2.py  api_pb2.pyi  api_pb2_grpc.py
scripts/: codegen-java-client.sh
src/stewkk/client/: Client.py  main.py
src/stewkk/client/codegen/: __init__.pyi  api_pb2.py  api_pb2.pyi  api_pb2_grpc.py
src/stewkk/db/: CMakeLists.txt  api.proto  example.proto  example_test.cpp  main.cpp  persistent.proto  wal.proto
src/stewkk/db/logic/controllers/: clear.cpp  controller.cpp  get.cpp  insert.cpp  remove.cpp  update.cpp
src/stewkk/db/logic/coordination/: global_versioning.cpp  zookeeper.cpp
src/stewkk/db/logic/filesystem/: filesystem.cpp
src/stewkk/db/logic/log/: file_log_sink.cpp
src/stewkk/db/logic/recovery/: recovery_test.cpp  swappable_wal_writer.cpp  wal_reader.cpp  wal_test.cpp  wal_writer.cpp  wal_writer_test.cpp
src/stewkk/db/logic/replication/: replication.cpp
src/stewkk/db/logic/result/: error.cpp  result.cpp
src/stewkk/db/logic/storage/: compaction.cpp  filesystem.cpp  inmemory.cpp  inmemory_test.cpp  persistent.cpp  persistent_storage_collection.cpp  persistent_test.cpp  storage.cpp  storage_system.cpp  storage_test.cpp  swappable_memory_storage.cpp  swappable_test.cpp
src/stewkk/db/logic/synchronization/: job_guard.cpp
src/stewkk/db/views/: add_handlers.cpp  clear.cpp  get.cpp  handlers_proxy.cpp  insert.cpp  is_master_middleware.cpp  register_handlers.cpp  remove.cpp  update.cpp
test/: CMakeLists.txt
